# doctor-cluster-config

./: .drone.star  .drone.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .mergify.yml  .sops.yaml  LICENSE  Makefile  README-laptops.md  README.md  amy.nix  bill.nix  ci.nix  clara.nix  configuration.nix  configurations.nix  default.nix  deploy.py  deploy_nixos.py  doctor.nix  donna.nix  fabfile.py  flake.nix  hardware-configuration.nix  keys.json  martha.nix  nardole.nix  netboot.nix  pubkeys.json  repl.nix  result  rose.nix  run-all.sh  sauron.nix  secrets.yml  shell.nix  sops.yaml.nix  sopsPermissions.json  tasks.py  (+3 more)
.github/: update-flake-inputs.sh
amy/: configuration.nix
bill/: configuration.nix
devShells/: flake-module.nix
docs/: ADD_SERVER.md  DNSMASQ.md  DNSMASQ_UBUNTU.md  IPMI.md  README.md  SECRETS.md  SETUP_PM.md  SEV_SNP_GIGABYTE.md  WIKIS.md  adric.md  buildbot.md  doctor-vms.md  expansion_cards.md  expansion_cards.md.template  expansion_cards_autogen.md  gen-ssh-config.sh  gen-tum-ssh-config.sh  generate-host-info.sh  generate-lldp-graph.sh  get-lldp-neighbors.sh  gpu.md  graham.md  intel-fpgas.md  inventory_numbers.md  laptops.md  martha.md  monitoring.md  morello.md  mte-supermicro.md  nix-cache.md  nix-getting-started.md  nixbot.md  ryan.md
hosts/: ace-facter.json  ace.nix  ace.yml  adelaide-facter.json  adelaide-factor.json  adelaide.nix  adelaide.yml  adric.cfg.sops  adric_config_db.json  amy-facter.json  amy-factor.json  amy.nix  amy.yml  bill.nix  (+100 more)
modules/niks3/nginx-s3-auth/module/: Cargo.toml
modules/niks3/nginx-s3-auth/module/src/: lib.rs
(+484 files in other folders)
